# mozangle

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  README.md  UPSTREAM  android-build  appveyor.yml  build.rs  build_data.rs  generate_build_data.py  rust.yml
.github/workflows/: rust.yml
gfx/angle/: cherry_picks.txt  update-angle.py
gfx/angle/checkout/include/GLSLANG/: ShaderLang.h  ShaderVars.h
gfx/angle/checkout/include/platform/: FeaturesGL_autogen.h
gfx/angle/checkout/src/common/: mathutil.h  platform.h  system_utils_win.cpp
gfx/angle/checkout/src/compiler/translator/: BaseTypes.h  Compiler.cpp  ParseContext.cpp  ParseContext.h  ShaderLang.cpp  glslang_tab_autogen.cpp
gfx/angle/checkout/src/compiler/translator/tree_ops/: EmulateGLFragColorBroadcast.cpp
gfx/angle/checkout/src/compiler/translator/tree_ops/d3d/: AddDefaultReturnStatements.cpp
gfx/angle/checkout/src/libANGLE/: Compiler.cpp  State.cpp
gfx/angle/checkout/src/libANGLE/renderer/d3d/: RendererD3D.h  TextureD3D.cpp  VertexDataManager.cpp  VertexDataManager.h
gfx/angle/checkout/src/libANGLE/renderer/d3d/d3d11/: Buffer11.cpp  Renderer11.cpp  Renderer11.h  ResourceManager11.h  VertexBuffer11.cpp  renderer11_utils.h
gfx/angle/checkout/src/libANGLE/renderer/d3d/d3d9/: Renderer9.cpp  Renderer9.h  VertexBuffer9.cpp
gfx/angle/targets/libEGL/: moz.build
patches/: egl-loader.patch  fix-build-on-newer-compilers.patch  new-compilers.patch  uwp.patch
src/: lib.rs  tests.rs
src/shaders/: bindings.hpp  bindings.rs  generate_bindings.sh  glslang-c.cpp  mod.rs
