[package]
name = "mozangle"
version = "0.3.5"
authors = ["The ANGLE Project Authors", "The Servo Project Developers"]
license = " BSD-3-Clause"
description = "Mozilla’s fork of Google ANGLE, repackaged as a Rust crate "
repository = "https://github.com/servo/mozangle"
readme = "README.md"

[dependencies]
lazy_static = "1.0"

[dev-dependencies]
dlopen = "0.1"

[build-dependencies]
cc = { version = "1.0.74", features = ["parallel"] }
gl_generator = { version = "0.13.1", optional = true }
walkdir = "2"

[features]
egl = ["gl_generator"]  # Only does anything on Windows
build_dlls = ["egl", "gl_generator"]
