[package]
name = "mozangle"
version = "0.5.3"
authors = ["The ANGLE Project Authors", "The Servo Project Developers"]
license = "BSD-3-Clause"
description = "Mozilla's fork of Google ANGLE, repackaged as a Rust crate."
repository = "https://github.com/servo/mozangle"
readme = "README.md"

[dependencies]
libz-sys = { version = "1.1", optional = true }

[dev-dependencies]
dlopen = "0.1"

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = [
    "runtime",
] }
cc = { version = "1", features = ["parallel"] }
gl_generator = { version = "0.14", optional = true }
walkdir = "2"

[features]
egl = ["gl_generator", "libz-sys"] # Only does anything on Windows
build_dlls = ["egl", "libz-sys"]
dynamic_lib = []
